@@ -917,91 +917,6 @@ public class LOSOrderBusinessBean implements LOSOrderBusiness {
 		return null;
 	}
 
-	public void cancelPickFrom(PickingOrderLine pick, boolean generateNewPick) throws FacadeException {
-		String logStr = "cancelPickFrom ";
-		if( pick == null ) {
-			log.error(logStr+"missing parameter pick");
-			return;
-		}
-		log.debug(logStr+"pick.id="+pick.getId()+", item="+pick.getItemData().getNumber());
-		int stateOld = pick.getState();
-
-		if( pick.getState()>=State.PICKED ) {
-			log.error(logStr+"Pick already done. => Abort");
-			throw new InventoryException(InventoryExceptionKey.PICK_ALREADY_FINISHED, "");
-		}
-		if( pick.getPickFromStockUnit() == null ) {
-			log.error(logStr+"Pick has no assigned stock. => Abort");
-			throw new InventoryException(InventoryExceptionKey.PICK_CONFIRM_NO_STOCK, "");
-		}
-		
-		PickingOrder pickingOrder = pick.getPickingOrder();
-		if( pickingOrder == null ) {
-			log.error(logStr+"Cannot confirm without order. Abort");
-			throw new InventoryException(InventoryExceptionKey.PICK_CONFIRM_MISSING_ORDER, "");
-		}
-		
-		StockUnit pickFromStock = pick.getPickFromStockUnit();
-		
-		// Release the reservation on pick from stock unit. 
-		// Maybe that some services would fail on the original reservations
-		pickFromStock.releaseReservedAmount(pick.getAmount());
-		
-		
-		pick.setState(State.CANCELED);
-		pick.setPickedAmount(BigDecimal.ZERO);
-		pick.setPickFromStockUnit(null);
-		pick.setPacket(null);
-		
-		DeliveryOrderLine deliveryOrderLine = pick.getDeliveryOrderLine();
-		if( deliveryOrderLine != null ) {
-			if (generateNewPick && pickingOrder.getOrderStrategy().isCreateFollowUpPicks()) {
-				BigDecimal amountMissing = pick.getAmount();
-
-				List<PickingOrderLine> pickListNew = pickingPosGeneratorService.generatePicks(deliveryOrderLine,
-						pickingOrder.getOrderStrategy(), amountMissing);
-				if (pickListNew != null && pickListNew.size() > 0) {
-					Collection<PickingOrderLine> notAddedPicks = pickingOrderGeneratorService
-							.addPicksToOrder(pickingOrder, pickListNew);
-					if (notAddedPicks.size() > 0) {
-						Collection<PickingOrder> additionalOrders = pickingOrderGeneratorService
-								.generatePickingOrders(notAddedPicks);
-						for (PickingOrder pickingOrderNew : additionalOrders) {
-							if (pickingOrderNew.getState() < State.PROCESSABLE) {
-								releasePickingOrder(pickingOrderNew);
-							}
-						}
-					}
-				}
-			}
-			
-			confirmDeliveryOrderLine(deliveryOrderLine, BigDecimal.ZERO);
-		}
-		
-		if( pickingOrder.getState()<State.STARTED ) {
-			startPickingOrder(pickingOrder, true);
-		}
-		
-		if( pick.getState() != stateOld )  {
-			firePickingOrderLineStateChangeEvent(pick, stateOld);
-		}
-
-		
-		// Check picking order state
-		boolean allPicksDone = true;
-		for( PickingOrderLine p : pickingOrder.getLines() ) {
-			if( p.getState() < State.PICKED ) {
-				allPicksDone = false;
-				break;
-			}
-		}
-		stateOld = pickingOrder.getState();
-		if( allPicksDone && stateOld < State.PICKED ) {
-			pickingOrder.setState(State.PICKED);
-			firePickingOrderStateChangeEvent(pickingOrder, stateOld);
-		}
-	}
-
 	/**
 	 * Confirm one picking position.
 	 * 
